# claudewatch

./: CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  environment.yml  pyproject.toml
docs/: roadmap-agent-team-support.md  roadmap-context-anatomy-widget.md  roadmap-crowdsourced-quotas.md
src/claudewatch/: __init__.py  __main__.py  cli.py  config.py  models.py
src/claudewatch/collector/: __main__.py  backfill.py  hook.py  push.py
src/claudewatch/quota/: detector.py
src/claudewatch/server/: app.py
src/claudewatch/storage/: jsonl.py  sqlite.py
src/claudewatch/tui/: app.py  dashboard.tcss  data_source.py
src/claudewatch/tui/widgets/: context_grid.py  context_growth.py  context_health.py  event_log.py  quota_status.py  session_grid.py  session_list.py  timeline.py  today_usage.py
tests/: conftest.py  test_backfill.py  test_config.py  test_context_grid.py  test_context_growth.py  test_context_health.py  test_data_source.py  test_hook.py  test_integration.py  test_models.py  test_push.py  test_server.py  test_session_grid.py  test_sqlite_storage.py  test_storage.py
