[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudewatch"
version = "0.2.0"
description = "Real-time TUI dashboard for Claude Code token usage monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Pete", email = "pete@q33north.com" },
]
keywords = ["claude", "anthropic", "token-usage", "tui", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "textual>=0.90",
    "pydantic>=2.0",
    "typer>=0.12",
    "watchdog>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies.server]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
claudewatch = "claudewatch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claudewatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
